@@ -1,4 +1,5 @@
 include COPYING
+include ChangeLog
 recursive-include examples *.py
 recursive-include test *.py
 
