@@ -1,0 +1,41 @@
+personal_ws-1.1 en 40
+isinstance
+removeHandler
+isProcessAlive
+CPython
+cadnygram
+addHandlers
+funcWithArgs
+microthread
+args
+processClass
+AssertionError
+badarg
+py
+iter
+msg
+str
+len
+Pythonic
+Candygram
+candygram
+canydgram
+cd
+Erlangy
+isAlive
+microthreads
+setitem
+handlerReference
+func
+ExitError
+textrm
+noproc
+spawnLink
+Candygram's
+proc
+getitem
+mutexes
+SourceForge
+addHandler
+processFlag
+PDF
