@@ -26,7 +26,7 @@ class InstallData(distutils.command.install_data.install_data):
 
 
 setup(name = 'Candygram',
-		version = '1.0b1',
+		version = '1.0b2',
 		license = 'GNU Lesser General Public License',
 		url = 'http://candygram.sourceforge.net',
 		author = 'Michael Hobbs',
@@ -44,7 +44,8 @@ setup(name = 'Candygram',
 		classifiers = [
 				'Development Status :: 4 - Beta',
 				'Intended Audience :: Developers',
-				'License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)',
+				'License :: OSI Approved :: ' \
+						'GNU Library or Lesser General Public License (LGPL)',
 				'Natural Language :: English',
 				'Operating System :: Microsoft :: Windows',
 				'Operating System :: OS Independent',
@@ -52,9 +53,11 @@ setup(name = 'Candygram',
 				'Programming Language :: Erlang',
 				'Programming Language :: Python',
 				'Topic :: Software Development :: Libraries :: Python Modules'],
+		download_url = 'https//sourceforge.net/project/showfiles.php?' \
+				'group_id=114295&package_id=123762&release_id=267770',
 		package_dir = {PACKAGE: 'src'},
 		packages = [PACKAGE],
 		data_files = [(PACKAGE+'/examples', examples),
 				(PACKAGE+'/docs', docs),
-				(PACKAGE, ['COPYING'])],
+				(PACKAGE, ['COPYING', 'ChangeLog'])],
 		cmdclass = {'install_data': InstallData})
